...
  "to":"To",
  "areYouSureAboutLoggingOut":"Are you sure about logging out?",
  "sendFeedback":"Send feedback",
  "shareWithFriends":"Share with Friends",
  "chooseTheme":"Choose Theme",
  "appVersion":"App version",
  "continueAsGues":"Continue as guest",
  "byContinuingYouAgree":"By continuing, you agree to our",
  "privacyPolicy":"Privacy Policy",
  "closeTheApp":"Close the App?",
  "changePassword":"Change password",
  "changeEmail":"Change Email",
  "setupYourAccount":"Setup your Account",
...
  "signedInAs":"Signed in as",
  "lastSynced":"Last synced: ",
  "notAvailable":"Not available",
  "googleDrive":"Google Drive",
  "chooseTheSyncSource":"Choose the Sync Source",
  "done":"Done",
  "delete":"Delete",
  "cancel":"Cancel",
  "submit":"Submit",
  "appDescription":"Discover diaryVault - a diary app designed to help you capture your thoughts, memories, and moments effortlessly. Available now on the Play Store!",
  "notificationsNotEnabled":"Notifications are not enabled",
  "notificationTimeNotEnabled":"You haven't selected a notification time",
  "youWillBeNotifiedAt":"You will be notified at {time}",
...
