...
  "notesSyncSuccessfull": "Notes sync successful",
  "loginToEnableAutoSync": "Please login to enable auto-sync",
  "enableAutoSave": "Enable auto save",
  "dateFilter": "Date Filter",
  "from": "From",
  "to": "To",
  "areYouSureAboutLoggingOut": "Are you sure about logging out?",
  "sendFeedback": "Send feedback",
  "shareWithFriends": "Share with Friends",
  "chooseTheme": "Choose Theme",
  "appVersion": "App version",
  "continueAsGues": "Continue as guest",
  "byContinuingYouAgree": "By continuing, you agree to our",
  "privacyPolicy": "Privacy Policy",
  "closeTheApp": "Close the App?",
  "changePassword": "Change password",
  "changeEmail": "Change Email",
  "setupYourAccount": "Setup your Account",
  "logIn": "Log In",
  "logOut": "Log out",
  "signIn": "Sign In",
  "forgotPassword": "Forgot password",
  "newPassword": "New Password",
  "confirmNewPassword": "Confirm new password",
...
  "lastSynced": "Last synced: ",
  "notAvailable": "Not available",
  "googleDrive": "Google Drive",
  "chooseTheSyncSource": "Choose the Sync Source",
  "done": "Done",
  "delete": "Delete",
  "cancel": "Cancel",
  "submit": "Submit",
  "appDescription": "Discover diaryVault - a diary app designed to help you capture your thoughts, memories, and moments effortlessly. Available now on the Play Store!",
  "notificationsNotEnabled": "Notifications are not enabled",
  "notificationTimeNotEnabled": "You haven't selected a notification time",
  "youWillBeNotifiedAt": "You will be notified at {time}",
  "@youWillBeNotifiedAt": {
...
  "enableDailyReminders": "Enable Daily Reminders",
  "dailyReminders": "Daily Reminders",
  "getDailyReminders": "Get daily reminders at your chosen time to keep your journal up to date.",
  "chooseTime": "Choose Time",
  "notificationTitle1": "Time to Journal!",
  "notificationDescription1": "Take a few minutes to reflect on your day in your diary",
  "sortByLatestFirst": "Sort by Latest First",
  "sortByOldestFirst": "Sort by Oldest First",
  "sortByAtoZ": "Sort by A-Z",
  "exportNotes": "Export your notes",
  "exportToPlainText": "Export to Plain Text",
  "exportToPDF": "Export to PDF",
  "tagAlreadyExists": "Tag already exists",
  "securitySettings": "Security Settings",
  "leave": "Leave",
...
  "pinMustBe4Digit": "Please enter a 4-digit PIN",
  "wrongPIN": "Wrong PIN",
  "signInWithEmail": "Sign in with Email",
  "projectOnGithub": "Project on Github",
  "recordAudio": "Record Audio",
  "pickFromFileManager": "Pick From Files",
  "cloudBackup": "Cloud Backup",
  "security": "Security",
  "reminders": "Reminders",
  "themeFontsAndLanguage": "Customize Theme, Fonts and Language",
  "importAndExportNotes": "Import and Export Notes",
  "warning": "Warning",
  "pinWarningMessage": "You are about to enable PIN lock without creating account, if you forget your PIN you will be locked out of the app. If this is not intentional, please setup your account from first option in settings menu, if this is intentional, please make sure to enable cloud backup for your notes",
  "fingerprintWarningMessage": "You are about to enable fingerprint without creating account, if there is any hardware damage to fingerprint sensor you will be locked out of the app. If this is not intentional, please setup your account from first option in settings menu, if this is intentional, please make sure to enable cloud backup for your notes",
  "acceptRisk": "I accept the risk to continue",
  "selectVoice": "Select Voice",
  "toolbarPosition": "Toolbar Position",
...
